--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"open-cli": "7.2.0"
   },
  "scripts": {
- 
+  "build": "npm run build",
   "build:azure": "npm run docs:build"
 }
   "name": "weather",
