--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"open-cli": "7.2.0"
   },
  "scripts": {
-  "build": "webpack --mode production",
-  "build:azure": "webpack --mode production && cp -r dist/* ../api/wwwroot"
+  "build":
+      "app_build_command": "webpack --mode production"
 }
   "name": "weather",
   "version": "1.0.0",
