--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-    - uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v2
       with:
         context: .
         file: ./Dockerfile
